# todo_list_fast_api

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
docker/: entrypoint.sh
src/: app.py
src/api/: __init__.py  todo_items.py  todo_list.py
src/controller/: todo.py
src/core/: settings.py
src/db/: models.py
src/db/alembic/: env.py
src/db/alembic/versions/: 2024_01_21_1829-ab4da47e0ee7_new_migration_name.py  2024_02_02_1053-5eb353384122_my_first_migrations.py
